@@ -155,7 +155,7 @@ Rcpp::NumericVector toPOSIXct_impl(const Rcpp::Vector<RTYPE>& sv,
 //' date(time) expressions to be parsed and converted. 
 //' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
 //' @return A vector of \sQuote{POSIXct} elements.
-//' @seealso The \code{\link[anytime]{anytime}} function is a more finished
+//' @seealso The \code{\link[anytime]{anytime-package}} function is a more finished
 //' variant which is based on the initial work with function, and taken into
 //' its own package.
 //' @author Dirk Eddelbuettel
@@ -218,6 +218,7 @@ Rcpp::NumericVector toPOSIXct(SEXP x, std::string tz = "UTC") {
 //' in ISO format to be parsed and converted. 
 //' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
 //' @return A vector of \sQuote{POSIXct} elements.
+//' @seealso \code{\link[anytime]{anytime-package}}
 //' @author Dirk Eddelbuettel
 //' @examples
 //' times <- c("2004-03-21 12:45:33.123456",
@@ -282,6 +283,7 @@ Rcpp::NumericVector charToPOSIXct(Rcpp::CharacterVector sv, std::string tz = "UT
 //' in ISO format to be parsed and converted. 
 //' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
 //' @return A vector of \sQuote{POSIXct} elements.
+//' @seealso \code{\link[anytime]{anytime-package}}
 //' @author Dirk Eddelbuettel
 //' @examples
 //' times <- c("2004-03-21 12:45:33.123456",
